--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,39 @@
-<<<<<<< HEAD
 h1{
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 12mm;
     float: left;
     padding-right: 500px;    
 }
-.top{
-    /* overflow: auto; */
-    width:100%;
-    background-color: beige;
-    padding-bottom: 0px;
-    position: fixed;
+#demo{
+    margin-top: 164px;
 }
-.top ul li{
+.carousel-inner img{
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    max-height: 550px;
+    width: auto;
+    height: auto;
+}
+.jumbotron{
+    padding: 20px; inherit;
+}
+#demo ul li{
     display: inline-block;
-    margin-left: 40px;
-    padding-top: 25px;
+    margin-left: 2px;
+    /* padding-top: 25px; */
 }
-.top a{
+.carousel-item >  img{
+    /* display: block; */
+    height: 350px;
+   width: 1100px;
+    line-height: 1;
+}
+
+a{
     text-decoration: none;
     font-family: 'Economica', sans-serif;
-    font-size: 25px;
+    font-size: 30px;
 }
 .top a:hover{
     color: black;
@@ -109,6 +122,3 @@ height: 10%;
 .bright{
     float: left;
 }
-=======
-h1{font-family:'Roboto Condensed',sans-serif;font-size:12mm;float:left;padding-right:500px}.top{overflow:auto;width:100%;background-color:beige;padding-bottom:0;position:fixed}.top ul li{display:inline-block;margin-left:40px;padding-top:25px}.top a{text-decoration:none;font-family:Economica,sans-serif;font-size:25px}.top a:hover{color:#000;text-decoration:underline}.top aside{float:left}.sub p{margin-left:100px;margin-top:100px;font-family:'Mate SC',serif;font-size:60px}.side{margin-right:5px;padding-right:0}.side img{width:250px;margin-left:150px;padding-right:0}.content img{width:100%;height:10%}.down{background-color:#00ced1;margin:none;overflow:hidden}.right{padding:none;margin:none;background-color:#dc143c;width:40%;overflow:hidden}.one{background-color:#000;color:#fff;margin-left:30px;overflow:hidden}.two{margin-left:30px;overflow:hidden}.three{margin-left:30px;background-color:#000;color:#fff;overflow:hidden}.bottom{overflow:hidden}.bleft{padding-left:40px;width:100%;color:#000;overflow:hidden;padding-right:0;padding-left:40px;margin-top:50px}.bleft p{font-family:'Days One',sans-serif;text-align:right;margin-right:560px}.bright{float:left}
->>>>>>> 1f3de09fbb459c504d9fc5b6a765f82b4ba92aac
