--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,15 @@ h1{
 }
 #demo{
     margin-top: 164px;
+    padding-right:0px;  
 }
 .carousel-inner img{
     top: 0;
     left: 0;
     min-width: 100%;
-    max-height: 550px;
+    max-width: 100%;
+    min-height: 400px;
+    max-height: 400px;
     width: auto;
     height: auto;
 }
@@ -23,17 +26,20 @@ h1{
     margin-left: 2px;
     /* padding-top: 25px; */
 }
-.carousel-item >  img{
-    /* display: block; */
+/* .carousel-item >  img{
+    top: 0;
+    left: 0;
+    right: 0;
+    display: block;
     height: 350px;
-   width: 1100px;
+    width: 1000px;
     line-height: 1;
-}
+} */
 
 a{
     text-decoration: none;
     font-family: 'Economica', sans-serif;
-    font-size: 30px;
+    font-size: 20px;
 }
 .top a:hover{
     color: black;
@@ -80,19 +86,42 @@ height: 10%;
     width: 40%;
     overflow: hidden;
 }
+.zero   {
+    background-color:darkturquoise;
+    font-family: 'Neuton', serif;
+    font-size: 20px;
+    color: black;
+    margin-left: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-right: 0px;      
+    overflow: hidden;
+}
 .one{
     background-color:black;
+    font-family: 'Neuton', serif;
     color: white;
     margin-left: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-size: 20px;
     overflow: hidden;
 }
 .two{
     margin-left: 30px;
+    font-family: 'Neuton', serif;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-size: 20px;
     overflow: hidden;
 }
 .three{
     margin-left: 30px;
+    font-family: 'Neuton', serif;
     background-color: black;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-size: 20px;
     color: white;
     overflow: hidden;
 }
