--- a/css/style.css
+++ b/css/style.css
@@ -6,15 +6,18 @@ h1{
 }
 #demo{
     margin-top: 164px;
+    padding-right:0px;  
 }
-.carousel-inner img{
+/* .carousel-inner img{
     top: 0;
     left: 0;
     min-width: 100%;
-    max-height: 550px;
+    max-width: 100%;
+    min-height: 400px;
+    max-height: 400px;
     width: auto;
     height: auto;
-}
+} */
 .jumbotron{
     padding: 20px; inherit;
 }
@@ -24,16 +27,19 @@ h1{
     /* padding-top: 25px; */
 }
 .carousel-item >  img{
-    /* display: block; */
+    top: 0;
+    left: 0;
+    right: 0;
+    display: block;
     height: 350px;
-   width: 1100px;
+    width: 1000px;
     line-height: 1;
 }
 
 a{
     text-decoration: none;
     font-family: 'Economica', sans-serif;
-    font-size: 30px;
+    font-size: 20px;
 }
 .top a:hover{
     color: black;
