--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ h1{
     padding-right: 500px;    
 }
 #demo{
-    margin-top: 164px;
+    margin-top: 134px;
     padding-right:0px;  
 }
 .carousel-inner img{
@@ -35,10 +35,14 @@ h1{
     width: 1000px;
     line-height: 1;
 } */
-
+.carousel-column{
+    height:500px;
+    width:900px;
+    margin:0 auto;
+  }
 a{
     text-decoration: none;
-    font-family: 'Economica', sans-serif;
+    font-family: 'Jockey One', sans-serif;
     font-size: 20px;
 }
 .top a:hover{
@@ -128,6 +132,9 @@ height: 10%;
 .bottom{
 
         overflow: hidden;
+        background-color: lightgray;
+        margin-top:120px;
+        height: 20%; 
         
         
 }
@@ -143,10 +150,14 @@ height: 10%;
 .bleft p{
 
 
-    font-family: 'Days One', sans-serif;
+    font-family: 'Jockey One', sans-serif;
     text-align: right;
     margin-right: 560px;
 
+}
+.bleft a{
+    font-family: 'Jockey One', sans-serif;
+    margin-top: 5px;
 }
 .bright{
     float: left;
