--- a/css/style.css
+++ b/css/style.css
@@ -5,18 +5,10 @@ h1{
     padding-right: 500px;    
 }
 #demo{
-<<<<<<< HEAD
     margin-top: 134px;
-=======
-<<<<<<< HEAD
-    margin-top: 134px;
-=======
-    margin-top: 164px;
->>>>>>> 5bea8cabd0eb2e55a3a34dce1c6c9f0559d9c643
->>>>>>> d5d3cec27db6610f23add1526ae237cebdac20e4
     padding-right:0px;  
 }
-/* .carousel-inner img{
+.carousel-inner img{
     top: 0;
     left: 0;
     min-width: 100%;
@@ -25,7 +17,7 @@ h1{
     max-height: 400px;
     width: auto;
     height: auto;
-} */
+}
 .jumbotron{
     padding: 20px; inherit;
 }
@@ -34,11 +26,7 @@ h1{
     margin-left: 2px;
     /* padding-top: 25px; */
 }
-<<<<<<< HEAD
 /* .carousel-item >  img{
-=======
-.carousel-item >  img{
->>>>>>> 5bea8cabd0eb2e55a3a34dce1c6c9f0559d9c643
     top: 0;
     left: 0;
     right: 0;
@@ -54,15 +42,7 @@ h1{
   }
 a{
     text-decoration: none;
-<<<<<<< HEAD
     font-family: 'Jockey One', sans-serif;
-=======
-<<<<<<< HEAD
-    font-family: 'Jockey One', sans-serif;
-=======
-    font-family: 'Economica', sans-serif;
->>>>>>> 5bea8cabd0eb2e55a3a34dce1c6c9f0559d9c643
->>>>>>> d5d3cec27db6610f23add1526ae237cebdac20e4
     font-size: 20px;
 }
 .top a:hover{
